--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 3,
   "name": "Pownload",
-  "version": "0.0.3",
+  "version": "0.1.1",
   "description": "CNKI批量下载插件",
   "permissions": [
     "activeTab",
     "downloads",
-    "scripting"
+    "scripting",
+    "tabs"
   ],
   "action": {
     "default_popup": "popup.html"
@@ -16,6 +17,12 @@
       "matches": ["*://*.cnki.net/*"],
       "js": ["content.js"]
     }
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "host_permissions": [
+    "*://*.cnki.net/*"
   ],
   "icons": {
     "128": "img/icons.svg"
